--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
-    <title>Course Mania</title>
+    <title>CREDIT CARD SAVER</title>
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,600|Roboto:400,400i,500" rel="stylesheet">
     <!--
@@ -40,18 +40,17 @@
         <div class="container main-menu">
             <div class="row align-items-center justify-content-between d-flex">
                 <div id="logo">
-                    <a href="index.html">
-                        <b style="color: #000; font-family: Poppins; font-weight: bold; font-size:18px;">COURSE
-                            MANIA</b>
-                    </a>
-                    <!-- <a href="index.html"><img src="img/logo2.png" width="50" height="50" alt="" title="" /></a> -->
-                    <!-- <a href="index.html>Course Mania</a> -->
+                    <!-- <a href="index.html"> -->
+                    <!-- <b style="color: #000; font-family: Poppins; font-weight: bold; font-size:18px;"></b> -->
+                    <!-- </a> -->
+                    <a href="index.html"><img src="img/logo.png" width="50" height="50" alt="CREDIT CARD SAVER" title="CREDIT CARD SAVER" /></a>
+                    <!-- <a href="index.html>CARD SAVER</a> -->
 
                 </div>
                 <nav id=" nav-menu-container ">
                     <ul class="nav-menu ">
                         <li class="menu-active "><a href="index.html ">Home</a></li>
-                        <li><a href="https://theatifwaheed.com/">About</a></li>
+                        <li><a href="https://theatifwaheed.com/ ">About</a></li>
                         <!-- <li><a href="pricing.html ">Pricing</a></li> -->
                         <!-- <li class="menu-has-children "><a href=" ">Pages</a>
                             <ul>
@@ -64,7 +63,7 @@
                                 <li><a href="blog-single.html ">Blog Single</a></li>
                             </ul>
                         </li> -->
-                        <li><a href="https://api.whatsapp.com/send/?phone=%2B923155437443&text&type=phone_number&app_absent=0">Contact</a>
+                        <li><a href="https://api.whatsapp.com/send/?phone=%2B923155437443&text&type=phone_number&app_absent=0 ">Contact</a>
                         </li>
                     </ul>
                 </nav>
@@ -79,15 +78,15 @@
             <div class="row fullscreen d-flex align-items-center justify-content-between ">
                 <div class="home-banner-content col-lg-6 col-md-6 ">
                     <h1>
-                        App That <br> Helps You <br>Get the Paid <br>Courses For FREE
+                        SAVE your CREDIT/DEBIT CARD FOR FREE in your own Phone
                     </h1>
-                    <p>Say NO to Pay for Courses just by using this App. Help us Grow by Installing this App.</p>
-                    <a href="https://play.google.com/store/apps/details?id=com.theatifwaheed.coursemania" target="_blank">
+                    <p>Say NO to Risk your Credit/Debit Card. Help us Grow by Installing this App.</p>
+                    <a href="https://play.google.com/store/apps/details?id=com.theatifwaheed.credit_card_saver" target="_blank ">
                         <div class="download-button d-flex flex-row justify-content-start ">
                             <div class="buttons flex-row d-flex ">
-                                <i class="fa fa-apple" style="color: #000;" aria-hidden="true "></i>
+                                <i class="fa fa-apple " style="color: #000; " aria-hidden="true "></i>
                                 <div class="desc ">
-                                    <!-- <a href="https://play.google.com/store/apps/details?id=com.theatifwaheed.coursemania"> -->
+                                    <!-- <a href="https://play.google.com/store/apps/details?id=com.theatifwaheed.coursemania "> -->
                                     <p>
                                         <span>Available</span> <br> on App Store
                                     </p>
@@ -95,11 +94,11 @@
                                 </div>
                             </div>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=com.theatifwaheed.coursemania" target="_blank">
+                    <a href="https://play.google.com/store/apps/details?id=com.theatifwaheed.credit_card_saver" target="_blank ">
                         <div class="buttons dark flex-row d-flex ">
                             <i class="fa fa-android " aria-hidden="true "></i>
                             <div class="desc ">
-                                <!-- <a href=""> -->
+                                <!-- <a href=" "> -->
                                 <p>
                                     <span>Available</span> <br> on Play Store
                                 </p>
@@ -110,7 +109,7 @@
                     </div>
                 </div>
                 <div class="banner-img col-lg-4 col-md-6 ">
-                    <img class="img-fluid" src="img/13 Pro - 1.png" alt="Course Mania">
+                    <img class="img-fluid " src="img/13 Pro - 1.png " alt="Course Mania ">
                 </div>
             </div>
         </div>
@@ -179,9 +178,9 @@
                 <div class="col-lg-4 col-md-8 single-footer-widget ">
                     <h4>Top Apps</h4>
                     <ul>
-                        <li><a href="https://play.google.com/store/apps/details?id=com.theatifwaheed.tasbeeh">TASBEEH</a>
+                        <li><a href="https://play.google.com/store/apps/details?id=com.theatifwaheed.tasbeeh ">TASBEEH</a>
                         </li>
-                        <li><a href="https://play.google.com/store/apps/details?id=com.theatifwaheed.bmi_calculator">BMI
+                        <li><a href="https://play.google.com/store/apps/details?id=com.theatifwaheed.bmi_calculator ">BMI
                                 CALCULATOR</a></li>
                         <!-- <li><a href="# ">Investor Relations</a></li> -->
                         <!-- <li><a href="# ">Terms of Service</a></li> -->
@@ -190,8 +189,8 @@
                 <div class="col-lg-4 col-md-8 single-footer-widget ">
                     <h4>YouTube</h4>
                     <ul>
-                        <li><a href="https://youtube.com/theatifwaheed">TheAtifWaheed</a></li>
-                        <li><a href="https://youtube.com/awkcreations">AWK Creations</a></li>
+                        <li><a href="https://youtube.com/theatifwaheed ">TheAtifWaheed</a></li>
+                        <li><a href="https://youtube.com/awkcreations ">AWK Creations</a></li>
                         <!-- <li><a href="# ">Investor Relations</a></li> -->
                         <!-- <li><a href="# ">Terms of Service</a></li> -->
                     </ul>
@@ -199,11 +198,11 @@
                 <div class="col-lg-4 col-md-8 single-footer-widget ">
                     <h4>Social Media</h4>
                     <ul>
-                        <li><a href="https://api.whatsapp.com/send/?phone=%2B923155437443&text&type=phone_number&app_absent=0">Whatsapp</a>
+                        <li><a href="https://api.whatsapp.com/send/?phone=%2B923155437443&text&type=phone_number&app_absent=0 ">Whatsapp</a>
                         </li>
-                        <li><a href="https://pk.linkedin.com/in/theatifwaheed">Instagram</a></li>
-                        <li><a href="https://instagram.com/theatifwaheed">LinkedIn</a></li>
-                        <li><a href="https://facebook.com/theatifwaheed">Facebook</a></li>
+                        <li><a href="https://pk.linkedin.com/in/theatifwaheed ">Instagram</a></li>
+                        <li><a href="https://instagram.com/theatifwaheed ">LinkedIn</a></li>
+                        <li><a href="https://facebook.com/theatifwaheed ">Facebook</a></li>
                     </ul>
                 </div>
                 <!-- <div class="col-lg-4 col-md-6 single-footer-widget ">
@@ -225,8 +224,8 @@
             <div class="footer-bottom row align-items-center ">
                 <p class="footer-text m-0 col-lg-6 col-md-12 ">
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy; 2022 <a href="https://lnkd.in/g5Vn8Nj" target="_blank"><strong><span
-                                class="myfont">The Techrie</span></strong></a>. All rights reserved. | Made with <i class="fa fa-heart-o " aria-hidden="true "></i> by <a href="https://theatifwaheed.com " target="_blank ">The Atif Waheed</a>
+                    Copyright &copy; 2022 <a href="https://lnkd.in/g5Vn8Nj " target="_blank "><strong><span
+                                class="myfont ">The Techrie</span></strong></a>. All rights reserved. | Made with <i class="fa fa-heart-o " aria-hidden="true "></i> by <a href="https://theatifwaheed.com " target="_blank ">The Atif Waheed</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
                 <div class="col-lg-6 col-md-6 social-link ">
